syntax = "proto3";

package transaction;
option go_package = "github.com/JuanGQCadavid/ds-practice-2025/utils/pb/suggestions";
import "common/common.proto";

service BookSuggestionsService {
    rpc initOrder (common.InitRequest) returns (common.InitResponse);
    rpc suggestBooks (common.NextRequest) returns (BookSuggest);
    rpc cleanOrder (common.NextRequest) returns (common.NextResponse);
}

message BookSuggest {
    message Book {
        string  bookId = 1;
        string title = 2;
        string author = 3;
    }

    repeated Book books = 1;
}
